# Zoe_PersonalAssistant

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
data/: portfolio_watchlist.json
docs/: technical-spec.md
src/zoe_assistant/: __init__.py  config.py  db.py  main.py  scheduler.py
src/zoe_assistant/routes/: assistant.py  briefings.py  google.py  portfolio.py  twilio.py
src/zoe_assistant/services/: __init__.py  assistant_service.py  briefing_service.py  finance_service.py  google_service.py
tests/: test_health.py
